2023年7月7日 大和田先生によるアップデート

--- a/BCS測定.html
+++ b/BCS測定.html
@@ -23,7 +23,7 @@
 
 
 <div class="BSC">
-    <img src="BCS測定①_自動.png" alt="BSC①" class="img-item">
+    <img src="BCS測定①_自動.png" alt="BSC①" class="img">
 </div>
 
 
