--- a/company.html
+++ b/company.html
@@ -82,6 +82,9 @@
         </table>      
     </div>
 
+<!-- 修正 20230623（親要素の定義） -->
+<!-- コンセプト（親要素） -->
+<div class="concept">
 
     <!-- コンセプト（１） 「創業者紹介＆大学発ベンチャー企業の特徴」-->
 <div class="founder">
@@ -142,6 +145,9 @@
     </div>
     <img src="cow_01.png" alt="牛_01" class="img-item">
 </div>
+
+</div>
+
 
 
 
