--- a/technology.html
+++ b/technology.html
@@ -106,12 +106,13 @@
                     AI分析<br>（飼養管理高度化）
                 </dt>
                 <dd>
-                    ・発情予測<br>
-                    蓄積した活動量データを用いて発情を予測するアルゴリズムを開発しました。
+                    ・蓄積した活動量データを用いて発情を予測するアルゴリズムを開発しました。<br>
+                    ・機械学習により牛の位置情報を特定する仕組みを構築しました（特許取得）。<br>
                     その他、乳中のデータを基に機械学習を活用して<br>
                     ・乳房炎発症予測<br>
                     ・潜在性ケトーシス発症予測<br>
-                    を行います。これらの予測を基にオンライン上で閲覧できるレポートを提供します。          </dd>
+                    を行います。これらの予測を基にオンライン上で閲覧できるレポートを提供します。          
+                </dd>
             </dl>
             <a class="link-button" href="AI分析.html">
                 AI分析 
