--- a/活動量計.html
+++ b/活動量計.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="活動量計">
-    <img src="活動量計①.png" alt="活動量計①" class="img-item">
+    <img src="活動量計①.png" alt="活動量計①" class="img">
 </div>
 
 
